frontend/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend
  namespace: homelab
spec:
  selector:
    istio: ingressgateway # ingress gateway yang ingin digunakan, karena kita bisa punya beberapa ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "frontend.prihantono.cloud" # domain name https://istio.io/latest/docs/reference/config/networking/gateway/#Server
