frontend/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: homelab
spec:
  hosts:
  - frontend.prihantono.cloud # domain, umumnya diasamakan dengan hosts di Gateway
  gateways:
    - "frontend" # nama Gateway yang diingikan
  http:
  - name: "frontend"
    route:
    - destination:
        host: frontend.homelab.svc.cluster.local # disarankan menggunakan format DNS full (FQDN)
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
  namespace: homelab
spec:
  host: frontend
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
  subsets:
  - name: v1
    labels:
      app: frontend
